--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/63a3999c02.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 </html>
